src/test/resources/semantic/custom/reject/mistakeInIfBlock.ul
void main() {
}

void foo() {
    string condition;

    if (false) {
        condition = "string1";
        return condition;
    } else {
        condition = "string2";
    }
}
